# Par2_Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  search.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/hpc/: streams_events.rst.txt
_sources/theory/: boundaries.rst.txt  dispersion_tensor.rst.txt  displacement_matrix.rst.txt  drift_correction.rst.txt  interpolation.rst.txt  rwpt.rst.txt
_sources/user/: quickstart.rst.txt
api/: index.html
dev/: semantic_map.html
docs/: Doxyfile  Makefile  build.sh
docs/_build/html/: genindex.html  index.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle
docs/_build/html/.doctrees/hpc/: performance_notes.doctree  rng_reproducibility.doctree  streams_events.doctree  workspace_allocs.doctree
docs/_build/html/.doctrees/theory/: boundaries.doctree  interpolation.doctree  rwpt.doctree
docs/_build/html/_sources/dev/: semantic_map.rst.txt
docs/_build/html/_sources/hpc/: memory_layout.rst.txt
docs/_build/html/_sources/theory/: dispersion_tensor.rst.txt  drift_correction.rst.txt  rwpt.rst.txt
docs/_build/html/hpc/: memory_layout.html  rng_reproducibility.html  streams_events.html
docs/_build/html_strict/: .buildinfo
docs/_build/html_strict/.doctrees/: environment.pickle  index.doctree
docs/_build/html_strict/.doctrees/api/: index.doctree
docs/_build/html_strict/.doctrees/dev/: semantic_map.doctree
docs/_build/html_strict/.doctrees/hpc/: memory_layout.doctree
docs/_build/html_strict/.doctrees/theory/: drift_correction.doctree
docs/_build/html_strict/_sources/api/: index.rst.txt
docs/_build/html_strict/_sources/hpc/: rng_reproducibility.rst.txt
docs/_build/html_strict/hpc/: performance_notes.html  workspace_allocs.html
docs/_build/html_strict/theory/: interpolation.html
docs/_build/html_strict2/: objects.inv  search.html  searchindex.js
docs/_build/html_strict2/.doctrees/: environment.pickle
docs/_build/html_strict2/.doctrees/theory/: dispersion_tensor.doctree
docs/_build/html_strict2/_sources/: index.rst.txt
docs/_build/html_strict2/_sources/hpc/: performance_notes.rst.txt  workspace_allocs.rst.txt
docs/_build/html_strict2/_sources/theory/: interpolation.rst.txt
docs/_build/html_strict2/api/: index.html
docs/_build/html_strict2/dev/: semantic_map.html
docs/_build/html_strict2/theory/: boundaries.html  dispersion_tensor.html  drift_correction.html  rwpt.html
docs/_doxygen/xml/: Doxyfile.xml  _2home_2sesquerre_2Par2_Core_2include_2par2_core_2par2_core_8hpp-example.xml  boundary_8hpp.xml  classpar2_1_1StatsComputer.xml  classpar2_1_1TransportEngine.xml  classpar2_1_1io_1_1CsvSnapshotWriter.xml  classpar2_1_1io_1_1PinnedParticlesBuffer.xml  debug__policy_8hpp.xml  deprecated.xml  dir_bc077c70e56531db32c9e07bcf5c74c8.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  grid_8hpp.xml  index.xml  injectors_8hpp.xml  io_8hpp.xml  namespacepar2.xml  namespacepar2_1_1detail.xml  namespacepar2_1_1io.xml  par2__core_8hpp.xml  stats_8hpp.xml  structpar2_1_1AxisBoundary.xml  structpar2_1_1BoundaryConfig.xml  structpar2_1_1ConstParticlesView.xml  structpar2_1_1CornerFieldView.xml  structpar2_1_1DeviceSpan.xml  structpar2_1_1DriftCorrectionView.xml  structpar2_1_1EngineConfig.xml  structpar2_1_1FaceFieldView.xml  structpar2_1_1GridDesc.xml  structpar2_1_1Moments3.xml  structpar2_1_1ParticleCounts.xml  structpar2_1_1ParticlesView.xml  structpar2_1_1StatsConfig.xml  structpar2_1_1StatsResult.xml  structpar2_1_1StepStats.xml  structpar2_1_1TransportParams.xml  structpar2_1_1UnwrappedPositionsView.xml  structpar2_1_1Version.xml  structpar2_1_1detail_1_1EngineImpl.xml  structpar2_1_1io_1_1CsvSnapshotConfig.xml  (+6 more)
docs/source/: conf.py  references.rst
docs/source/dev/: semantic_map.rst
docs/source/hpc/: memory_layout.rst  performance_notes.rst  rng_reproducibility.rst
docs/source/user/: memory_contract.rst  performance_tips.rst
examples/: CMakeLists.txt  export_csv_and_stats.cu  minimal_bind_ptrs.cu  pipeline_example.cu  pipeline_integration.cu  steady_flow_example.cu  verify_boundary_conditions.cu  verify_rwpt_semantics.cu
hpc/: streams_events.html  workspace_allocs.html
include/par2_core/: boundary.hpp  debug_policy.hpp  grid.hpp  injectors.hpp  io.hpp  par2_core.hpp  stats.hpp  transport_engine.hpp  types.hpp  velocity_layout.hpp  version.hpp  views.hpp
legacy/Particles/: PParticles.cu
src/: injectors.cu  io.cu  stats.cu  transport_engine.cu
src/internal/: cuda_check.cuh  device_span.cuh
src/internal/boundary/: boundary_helpers.cuh
src/internal/fields/: cornerfield_accessor.cuh  facefield_accessor.cuh
src/internal/grid/: indexing.cuh
src/internal/math/: dispersion.cuh  tensor_dispersion.cuh  vec3.cuh
src/internal/rng/: rng_policy.cuh
src/kernels/: cornerfield.cu  cornerfield.cuh  drift_correction.cu  drift_correction.cuh  moments.cuh  move_particles.cu  move_particles.cuh  unwrap_positions.cuh
src/workspace/: workspace.cuh
theory/: boundaries.html  dispersion_tensor.html  interpolation.html
tools/: compare_original_vs_core.py  run_all_12_tests.sh
tools/legacy_runner/: CMakeLists.txt  ftl_importer.hpp  legacy_config.cpp  legacy_config.hpp  main.cu
tools/legacy_runner/legacy_format_examples/: example.ftl  test01_baseline_trilinear.yaml  test02_baseline_finite_difference.yaml  test03_advection_only.yaml  test04_diffusion_only.yaml  test05_high_dispersivity.yaml  test06_injection_near_boundary.yaml
tools/legacy_runner/legacy_format_examples/output/: test03_result.csv  test03_snap-0.csv  test03_snap-200.csv  test03_snap-400.csv
user/: pipeline_recipes.html
